--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "lint": "eslint --ext .js",
     "build": "node build/build.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "^3.4.1",
+    "sass-loader": "^7.3.1",
+    "vue": "^2.6.10"
+  },
   "devDependencies": {
+    "art-template-loader": "^1.4.3",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -36,6 +41,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "os": "^0.1.1",
@@ -44,6 +50,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-resources-loader": "^2.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "style-loader": "^1.0.0",
